--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,8 +1,17 @@
 .header {
-
     transition: .3s;
-    height: 60px;
+    height: 3.75em;
     background-color: var(--background);
     box-shadow: 0px 0px 50px 1px rgba(0, 0, 0, 0.15);
-    border-radius: 1px 1px 20px 20px;
+    border-radius: 0 0 max(1.25em, 15px) max(1.25em, 15px);
+    padding: 0 20px;
+}
+
+.wrapper {
+    width: min(100%, 71.25em);
+    height: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
